Fixed line height issue when blog post titles are long enough to wrap.

--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -96,6 +96,7 @@ h1 {
     color: @headerFontColor;
     font-family: @headerFontFamily;
     font-weight: 400;
+    line-height: 125%;
 }
 
 h1, 
